[tool.poetry]
name = "raizentech"
version = "0.1.0"
description = ""
authors = ["Marvio Rocha <marviorocha@marviorocha.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.0"
flask = "^3.0.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
supabase = "^2.2.1"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
